# DenemeTahtasiDjango

./: .gitignore  README.md  pyproject.toml
DenemeTahtasi/: manage.py
DenemeTahtasi/DenemeTahtasi/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
DenemeTahtasi/api/: urls.py  views.py
